setup app for Heroku

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>I didnt feel like actually putting info here. So here is a robot.</p>
         <img class="portrait" src="/img/robot.png">
     </div>
     
