Added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>About Me</title>
+    <title>About</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>I didnt feel like actually putting info here. So here is a robot.</p>
+        <p>The data comes from weatherstack and mapbox to give you your weather. Enjoy this picture of the robot that gets your info!</p>
         <img class="portrait" src="/img/robot.png">
     </div>
     
